tabshell-dialogs/src/main/resources/com/techsenger/tabshell/dialogs/file/file-dialog.css
/*
 * Copyright 2024-2026 Pavel Castornii.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.table-view .table-row-cell {
    -fx-background-insets: 0, 0 0 0 0;
}

.combo-box.location .list-cell HBox {
    -fx-spacing: 0.25em;
}

.column-list-view .column > .cell {
    -fx-graphic-text-gap: 0.5em;
}

